# mailmap

./: .gitignore  ANALYSIS_INDEX.md  CLAUDE.md  CONNECTION_FAILED.txt  COVERAGE_QUICK_REFERENCE.md  MAILMAP.md  MODERNIZATION_CHECKLIST.md  MODERNIZATION_EXAMPLES.md  MODERNIZATION_README.md  MODERNIZATION_REPORT.md  MODERNIZATION_SUMMARY.txt  Makefile  README.md  RECOMMENDED_TESTS.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_SUMMARY.txt  THUNDERCONTROL.md  categories.txt  config.example.toml  deploy.conf  pyproject.toml
mailmap/: categories.py  cli.py  config.py  content.py  database.py  email.py  imap_client.py  llm.py  main.py  mbox.py  profile.py  protocol.py  spam.py  thunderbird.py  websocket_server.py
mailmap/commands/: __init__.py  classify.py  daemon.py  imap_ops.py  init.py  learn.py  upload.py  utils.py
mailmap/prompts/: classify_email.txt  normalize_categories.txt  refine_folder_structure.txt  repair_json.txt  repair_rename_map.txt  suggest_folder_structure.txt
mailmap/sources/: __init__.py  base.py  imap.py  thunderbird.py  websocket.py
mailmap/targets/: __init__.py  base.py  imap.py  websocket.py
src/mailmap/: __init__.py  config.py  content.py  database.py  imap_client.py  llm.py  main.py  mcp_server.py  thunderbird.py
src/mailmap/prompts/: classify_email.txt  generate_folder_description.txt
tests/: __init__.py  conftest.py  test_categories.py  test_classify.py  test_cli_commands.py  test_config.py  test_content.py  test_database.py  test_imap_client.py  test_imap_integration.py  test_llm.py  test_reconnection.py  test_sources.py  test_spam.py  test_sync.py  test_targets.py  test_thunderbird.py  test_websocket_integration.py  test_websocket_server.py
thunderbird-mailmap/: background.js  manifest.json  options.html  options.js  protocol.js
