[project]
name = "mailmap"
version = "0.1.0"
description = "Email classification system using local LLM via MCP"
requires-python = ">=3.11"
dependencies = [
    "imapclient>=3.0.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mailmap = "mailmap.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mailmap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
